# lumen-lang-compiler

./: Cargo.toml  README.md
benches/: pipeline.rs
docs/: DESIGN.md  LANGUAGE.md
examples/: factorial.lm  fib.lm  fizzbuzz.lm  primes.lm
src/: diagnostics.rs  errors.rs  explain.rs  format.rs  lib.rs  main.rs  session.rs  source.rs  span.rs  suggest.rs
src/backend/: builtins.rs  bytecode.rs  c.rs  codegen.rs  disasm.rs  mod.rs  object.rs  peephole.rs  tests.rs  verify.rs  vm.rs
src/backend/c/: tests.rs
src/backend/object/: tests.rs
src/backend/peephole/: tests.rs
src/backend/verify/: tests.rs
src/format/: tests.rs
src/hir/: lower.rs  mod.rs  print.rs  tests.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/mir/: build.rs  dot.rs  interp.rs  mod.rs  opt.rs  print.rs  tests.rs
src/mir/interp/: tests.rs
src/opt/: dce.rs  fold.rs  inline.rs  mod.rs  tests.rs
src/parser/: ast.rs  mod.rs  print.rs  tests.rs
src/sema/: mod.rs  resolve.rs  typeck.rs  types.rs
src/sema/resolve/: tests.rs
src/sema/typeck/: tests.rs
tests/: arrays.rs  control_flow.rs  examples.rs  foreach.rs  integration.rs  match_expr.rs  regression.rs  stdlib.rs  strings.rs  structs.rs  tuples.rs
tests/common/: mod.rs
